<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="ticket">Написать в поддержку</string>
    <string name="args">"Пользовательское соглашение"</string>
    <string name="share_message"> "https://practicum.yandex.ru/" </string>
    <string name="ticketMessage">>Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanksMessage">>Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="my_mail">>"gekata4games@gmail.com</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>

</resources>