<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Settings"
    android:visibility="visible"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backMainActivity"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            app:icon="@drawable/arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textSize="@dimen/SettingsPadding"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="476dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchNightMode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingStart="@dimen/medium_padding"
            android:paddingRight="12dp"
            android:text="@string/black_theme"
            android:textSize="@dimen/text"


            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center_vertical"
                android:paddingLeft="@dimen/medium_padding"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/shareButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/share"
                app:iconGravity="end"
                app:iconTint="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/medium_padding"
                android:text="@string/ticket"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/sendTicketButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ticket"
                app:iconGravity="end"
                app:iconTint="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/medium_padding"
                android:text="@string/args"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/argsButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/arrow_forward"
                app:iconGravity="end"
                app:iconTint="@color/gray" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>
